--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 
 
@@ -17,8 +16,8 @@
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <div class="container">
-			<a href="index.html" class="navbar-brand">City University</a>
-		</div>
+            <a href="index.html" class="navbar-brand">City University</a>
+        </div>
         <div class="container-fluid">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
@@ -40,79 +39,73 @@
 
 
 
-<!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
+    <!-- Carousel -->
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
-    <!-- Indicators/dots -->
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-    </div>
+        <!-- Indicators/dots -->
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        </div>
 
-    <!-- The slideshow/carousel -->
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="https://image.shutterstock.com/image-illustration/education-concept-3d-hat-book-260nw-1906628188.jpg"
-                class="d-block" style="width:100%">
+        <!-- The slideshow/carousel -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://image.shutterstock.com/image-illustration/education-concept-3d-hat-book-260nw-1906628188.jpg" class="d-block" style="width:100%">
+            </div>
+            <div class="carousel-item">
+                <img src="https://c8.alamy.com/comp/PA9WF7/school-supplies-with-colorful-paper-background-education-banner-PA9WF7.jpg" class="d-block" style="width:100%">
+            </div>
+            <div class="carousel-item">
+                <img src="https://image.shutterstock.com/image-illustration/education-concept-3d-hat-book-260nw-1906628188.jpg" class="d-block" style="width:100%">
+            </div>
         </div>
-        <div class="carousel-item">
-            <img src="https://c8.alamy.com/comp/PA9WF7/school-supplies-with-colorful-paper-background-education-banner-PA9WF7.jpg"
-                class="d-block" style="width:100%">
-        </div>
-        <div class="carousel-item">
-            <img src="https://image.shutterstock.com/image-illustration/education-concept-3d-hat-book-260nw-1906628188.jpg"
-                class="d-block" style="width:100%">
-        </div>
-    </div>
 
-    <!-- Left and right controls/icons -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <!-- Left and right controls/icons -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
         <span class="carousel-control-prev-icon"></span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
         <span class="carousel-control-next-icon"></span>
     </button>
-</div>
+    </div>
 
 
 
 
 
-       <!-- Main center Content -->
+    <!-- Main center Content -->
     <div class="row ">
 
 
         <div id="sidebar" class="col-md-2 nav-link text-dark navbar-light bg-primary">
             <span class=" badge rounded-pill bg-warning text-dark">
                 Left Sidebar</span>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">About US</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="cv.html">CV</a>
-                    </li>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutus.html">About US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cv.html">CV</a>
+                </li>
 
-                </ul>
-            
+            </ul>
+
         </div>
 
 
         <div id="content" class="col-md-8 bg-secondary container-fluid">
             <div id="one">
-                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img
-                    src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"><br><br>
-                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"><br><br>
+                <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <img src="https://wallpapersmug.com/download/3840x2160/a4c6a4/spider-man-far-from-home-cover-art.jpg">
             </div>
 
@@ -126,20 +119,21 @@
 
     </div>
 
-	<footer class="p-5 bg-dark text-white text-center position-relative">
-		City University
-		<div class="container">
-			<p class="lead">
-				Copy wright &copy; Md. Shabbir Hossen
-				<a href="" class="position-absulate botom-0 end-0 p-5">
-					<i class="bi bi-arrow-up-circle bi-color-light h1"></i>
-				</a>
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+        City University
+        <div class="container">
+            <p class="lead">
+                Copy wright &copy; Md. Shabbir Hossen
+                <a href="" class="position-absulate botom-0 end-0 p-5">
+                    <i class="bi bi-arrow-up-circle bi-color-light h1"></i>
+                </a>
 
-			</p>
+            </p>
 
-		</div>>
+        </div>>
 
-	</footer>
+    </footer>
 
 </body>
+
 </html>
