--- a/cv.html
+++ b/cv.html
@@ -2,119 +2,118 @@
 <html>
 
 <head>
-	<title>CV</title>
-	<meta charset="utf8">
-	<link rel="stylesheet" type="text/css" href="CSS/style.css">
-	<link rel="stylesheet" type="text/css"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <title>CV</title>
+    <meta charset="utf8">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 
-<body id="cvbody">
+<body>
 
 
 
-	<nav class=" navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-		<div class="container">
-			<a href="index.html" class="navbar-brand">City University</a>
-		</div>
-		<div class="container-fluid">
-			<ul class="navbar-nav ms-auto">
-				<li class="nav-item">
-					<a class="nav-link active" href="index.html">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="contact.html">Contact Us</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="aboutus.html">About US</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="cv">CV</a>
-				</li>
+    <nav class=" navbar container navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <div class="container">
+            <a href="index.html" class="navbar-brand">City University</a>
+        </div>
+        <div class="container-fluid">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutus.html">About US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cv">CV</a>
+                </li>
 
-			</ul>
-		</div>
-	</nav>
+            </ul>
+        </div>
+    </nav>
 
 
-	<!--Form Start-->
-	<div id="form1">
-		<div id="header">
-			<h2 align="center">CV Form</h2>
-		</div>
-		<form class="row gw-3">
-			<div class="col-md-6 ">
-				<label class="form-label">First Name</label>
-				<input type="Name" class="form-control" placeholder="Enter your first name" required>
-			</div>
-			<div class="col-md-6">
-				<label class="form-label">Last Name</label>
-				<input type="Name" class="form-control" placeholder="Enter your last name" required>
-			</div>
-			<div class="col-md-6">
-				<label class="form-label">Father's Name</label>
-				<input type="Name" class="form-control" placeholder="Enter your Father's Name" required>
-			</div>
-			<div class="col-md-6">
-				<label class="form-label">Mother's Name</label>
-				<input type="Name" class="form-control" placeholder="Enter your Mother's Name" required>
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Date Of Birth</label>
-				<input type="Date" class="form-select">
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Gender</label>
+    <!--Form Start-->
+    <div class="container " style="background-color: aquamarine; margin-top: 60px;">
+        <div class="row">
+            <h2 align="center">CV Form</h2>
+        </div>
+        <form class="row gw-3">
+            <div class="col-md-6 ">
+                <label class="form-label">First Name</label>
+                <input type="Name" class="form-control" placeholder="Enter your first name" required>
+            </div>
+            <div class="col-md-6">
+                <label class="form-label">Last Name</label>
+                <input type="Name" class="form-control" placeholder="Enter your last name" required>
+            </div>
+            <div class="col-md-6">
+                <label class="form-label">Father's Name</label>
+                <input type="Name" class="form-control" placeholder="Enter your Father's Name" required>
+            </div>
+            <div class="col-md-6">
+                <label class="form-label">Mother's Name</label>
+                <input type="Name" class="form-control" placeholder="Enter your Mother's Name" required>
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Date Of Birth</label>
+                <input type="Date" class="form-select">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Gender</label>
 
-				<select class="form-select">
+                <select class="form-select">
 					<option>...</option>
 					<option>Male</option>
 					<option>Female</option>
 					<option>Others</option>
 				</select>
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Religion</label>
-				<select class="form-select">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Religion</label>
+                <select class="form-select">
 					<option>...</option>
 					<option>Islam</option>
 					<option>Hindu</option>
 					<option>Boddho</option>
 					<option>Christan</option>
 				</select>
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Nationality</label>
-				<select class="form-select">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Nationality</label>
+                <select class="form-select">
 					<option>...</option>
 					<option>Bangladeshi</option>
 					<option>Indian</option>
 					<option>Others</option>
 				</select>
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Marital Status</label>
-				<select class="form-select">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Marital Status</label>
+                <select class="form-select">
 					<option>...</option>
 					<option>Married</option>
 					<option>Unmarried</option>
 					<option>Widow</option>
 				</select>
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">National Id</label>
-				<input type="Number" class="form-control" placeholder="Enter your NID Number" required>
-			</div>
-			<div class="col-md-6">
-				<label class="form-label">Mobile Number</label>
-				<input type="Number" class="form-control" placeholder="Enter your Mobile Number" required>
-			</div>
-			<div class="col-md-6">
-				<label class="form-label">Email Address</label>
-				<input type="Email" class="form-control" placeholder="example@gmail.com" required>
-			</div>
-			<div class="col-md-12">
-				<label class="form-label">Present Address</label required>
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">National Id</label>
+                <input type="Number" class="form-control" placeholder="Enter your NID Number" required>
+            </div>
+            <div class="col-md-6">
+                <label class="form-label">Mobile Number</label>
+                <input type="Number" class="form-control" placeholder="Enter your Mobile Number" required>
+            </div>
+            <div class="col-md-6">
+                <label class="form-label">Email Address</label>
+                <input type="Email" class="form-control" placeholder="example@gmail.com" required>
+            </div>
+            <div class="col-md-12">
+                <label class="form-label">Present Address</label required>
 				<input type="text" class="form-control">
 			</div>
 			<div class="col-md-12">
@@ -126,7 +125,7 @@
 			</div>
 			<div class="col-md-6">
 				<label class="form-label">Examinations</label>
-				<select class="form-select">
+                <select class="form-select">
 					<option>...</option>
 					<option>Bachelor of Science (BSc)</option>
 					<option>Bachelor of Arts (BA)</option>
@@ -134,38 +133,38 @@
 					<option>Bachelor in Business Adminestrations (BBA)</option>
 					<option>Bachelor of Medicine and Bachelor of Surgery (MBBS)</option>
 				</select>
-			</div>
-			<div class="col-md-6">
-				<label class="form-label">Concentration/ Major/Group</label>
-				<input type="text" class="form-control">
-			</div>
-			<div class="col-md-12">
-				<label class="form-label">Institute Name</label>
-				<input type="text" class="form-control">
-			</div>
-			<div class="col-md-12">
-				<input type="checkbox">
-				<label class="form-check-label">This is a foreign institute</label>
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Result</label>
-				<input type="Number" class="form-control">
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Passing Year</label>
-				<input type="Number" class="form-control">
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Duration</label>
-				<input type="text" class="form-control">
-			</div>
-			<div>
-				<h4>Higher Secondary / Diploma</h4>
-			</div>
+            </div>
+            <div class="col-md-6">
+                <label class="form-label">Concentration/ Major/Group</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="col-md-12">
+                <label class="form-label">Institute Name</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="col-md-12">
+                <input type="checkbox">
+                <label class="form-check-label">This is a foreign institute</label>
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Result</label>
+                <input type="Number" class="form-control">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Passing Year</label>
+                <input type="Number" class="form-control">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Duration</label>
+                <input type="text" class="form-control">
+            </div>
+            <div>
+                <h4>Higher Secondary / Diploma</h4>
+            </div>
 
-			<div class="col-md-6">
-				<label class="form-label">Concentration/ Major/Group</label>
-				<select class="form-select">
+            <div class="col-md-6">
+                <label class="form-label">Concentration/ Major/Group</label>
+                <select class="form-select">
 					<option>...</option>
 					<option>Science</option>
 					<option>Arts</option>
@@ -175,95 +174,95 @@
 					<option>Diploma in Computer</option>
 					<option>Diploma in Electronics</option>
 				</select>
-			</div>
+            </div>
 
-			<div class="col-md-6">
-				<label class="form-label">Institute Name</label>
-				<input type="text" class="form-control">
-			</div>
-			<div class="col-md-6"></div>
-			<div class="col-md-6">
-				<input type="checkbox">
-				<label class="form-check-label">This is a foreign institute</label>
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Result</label>
-				<input type="Number" class="form-control">
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Passing Year</label>
-				<input type="Number" class="form-control">
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Duration</label>
-				<input type="text" class="form-control">
-			</div>
+            <div class="col-md-6">
+                <label class="form-label">Institute Name</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                <input type="checkbox">
+                <label class="form-check-label">This is a foreign institute</label>
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Result</label>
+                <input type="Number" class="form-control">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Passing Year</label>
+                <input type="Number" class="form-control">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Duration</label>
+                <input type="text" class="form-control">
+            </div>
 
-			<div>
-				<h4>Secondary School Certifications </h4>
-			</div>
+            <div>
+                <h4>Secondary School Certifications </h4>
+            </div>
 
-			<div class="col-md-6">
-				<label class="form-label">Concentration/ Major/Group</label>
-				<select class="form-select">
+            <div class="col-md-6">
+                <label class="form-label">Concentration/ Major/Group</label>
+                <select class="form-select">
 					<option>...</option>
 					<option>Science</option>
 					<option>Arts</option>
 					<option>Commerce</option>
 					<option>Vocational</option>
 				</select>
-			</div>
+            </div>
 
-			<div class="col-md-6">
-				<label class="form-label">Institute Name</label>
-				<input type="text" class="form-control">
-			</div>
-			<div class="col-md-6"></div>
-			<div class="col-md-6">
-				<input type="checkbox">
-				<label class="form-check-label">This is a foreign institute</label>
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Result</label>
-				<input type="Number" class="form-control">
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Passing Year</label>
-				<input type="Number" class="form-control">
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Duration</label>
-				<input type="text" class="form-control">
-			</div>
-			<div class="col-md-4">
-				<label class="form-label">Upload Your Picture</label>
-				<input type="file">
-			</div>
-			<div class="col-md-6">
-				<button type="submit" class="btn btn-primary">Submit</button>
-			</div>
-
-
-		</form>
+            <div class="col-md-6">
+                <label class="form-label">Institute Name</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                <input type="checkbox">
+                <label class="form-check-label">This is a foreign institute</label>
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Result</label>
+                <input type="Number" class="form-control">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Passing Year</label>
+                <input type="Number" class="form-control">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Duration</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Upload Your Picture</label>
+                <input type="file">
+            </div>
+            <div class="col-md-6">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
 
 
+        </form>
 
 
-	</div>
-	<footer class="p-5 bg-primary text-white text-center position-relative">
-		City University
-		<div class="container">
-			<p class="lead">
-				Copy wright &copy; Md. Shabbir Hossen
-				<a href="" class="position-absulate botom-0 end-0 p-5">
-					<i class="bi bi-arrow-up-circle h1"></i>
-				</a>
 
-			</p>
 
-		</div>>
+    </div>
+    <footer class="p-5 bg-primary text-white text-center position-relative container">
+        City University
+        <div class="container">
+            <p class="lead">
+                Copy wright &copy; Md. Shabbir Hossen
+                <a href="" class="position-absulate botom-0 end-0 p-5">
+                    <i class="bi bi-arrow-up-circle h1"></i>
+                </a>
 
-	</footer>
+            </p>
+
+        </div>>
+
+    </footer>
 </body>
 
 </html>
