--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Home || City University</title>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" 
-    href="CSS/style.css">
-    <link rel="stylesheet" type="text/css" 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
+    </script>
 </head>
 
 
@@ -54,13 +54,13 @@
         <!-- The slideshow/carousel -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://image.shutterstock.com/image-illustration/education-concept-3d-hat-book-260nw-1906628188.jpg" class="d-block" style="width:100%">
+                <img src="https://media-exp1.licdn.com/dms/image/C511BAQHE9ado2KPp6A/company-background_10000/0/1574745219568?e=2159024400&v=beta&t=4rGg76XOV1ppkQjOMGnyaSnUNbI2xawYtVF23jaZ3rA" class="d-block" style="width:100%">
             </div>
             <div class="carousel-item">
-                <img src="https://c8.alamy.com/comp/PA9WF7/school-supplies-with-colorful-paper-background-education-banner-PA9WF7.jpg" class="d-block" style="width:100%">
+                <img src="https://media-exp1.licdn.com/dms/image/C511BAQHE9ado2KPp6A/company-background_10000/0/1574745219568?e=2159024400&v=beta&t=4rGg76XOV1ppkQjOMGnyaSnUNbI2xawYtVF23jaZ3rA" class="d-block" style="width:100%">
             </div>
             <div class="carousel-item">
-                <img src="https://image.shutterstock.com/image-illustration/education-concept-3d-hat-book-260nw-1906628188.jpg" class="d-block" style="width:100%">
+                <img src="https://media-exp1.licdn.com/dms/image/C511BAQHE9ado2KPp6A/company-background_10000/0/1574745219568?e=2159024400&v=beta&t=4rGg76XOV1ppkQjOMGnyaSnUNbI2xawYtVF23jaZ3rA" class="d-block" style="width:100%">
             </div>
         </div>
 
@@ -104,7 +104,11 @@
 
 
         <div class="col-md-8 bg-secondary container-fluid">
-            
+            <div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Cityuniversycam.png/1200px-Cityuniversycam.png">
+
+            </div>
+
 
         </div>
 
@@ -119,9 +123,9 @@
     <footer class="p-5 bg-dark text-white text-center position-relative">
         City University
         <div class="container">
-            <p class="lead">
+            <p class="lead ">
                 Copy wright &copy; Md. Shabbir Hossen
-                <a href="" class="position-absulate botom-0 end-0 p-5">
+                <a href="" class="position-absulate botom-0 end-0">
                     <i class="bi bi-arrow-up-circle bi-color-dark h1"></i>
                 </a>
 
